request(form & hero-home) corrected spacing around cards request#51593

--- a/src/components/hero/hero-home/hero-home.sass
+++ b/src/components/hero/hero-home/hero-home.sass
@@ -115,7 +115,6 @@
     @include phone-lg
       flex-direction: column
     display: flex
-    flex-direction: row
     padding-top: 1rem 
 
 
@@ -144,7 +143,8 @@
     @include phone-land-lg
       display: none
     opacity: 0
-    margin-left: 12.5%
+    margin-right: 6.25%;
+    margin-left: 6.25%;
     border-radius: 15px
     box-shadow: 5px 5px 10px 0 rgba($black, 0.5)
     background-color: $white
